--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -215,7 +215,7 @@ jobs:
             exit 1
           fi
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@master
         with:
           role-to-assume: ${{ secrets.VWR_ROLE_ARN }}
           aws-region: ${{ env.REGION }}
