Update and rename test-workflow.yml to notify-workflow.yml

--- a/.github/workflows/notify-workflow.yml
+++ b/.github/workflows/notify-workflow.yml
@@ -8,8 +8,9 @@ on:
     workflows: ["Push Workflow"]
     types: [completed]
 jobs:
-  on_success:
+  notify-job:
     runs-on: ubuntu-latest
+    name: Send workflow information to endpoint
     environment: notify_env
     permissions:
       id-token: write
