UX update and query parameters added

--- a/source/control-panel/package.json
+++ b/source/control-panel/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
     "vue": "^3.0.0",
+    "vue-router": "^3.5.3",
     "vue-timers": "^2.0.4"
   },
   "devDependencies": {
