nested template for getting started #102, remove nested template before running cfn-nag as it is not supported, vpc now dependent on vpc policy so deletion occurs at right order #106

--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -183,6 +183,8 @@ jobs:
         with:
           path: deployment/
           key: ${{ github.sha }}
+      - name: Remove nested template before running cfn_nag
+        run: rm deployment/aws-virtual-waiting-room-geting-started.template
       - name: Run cfn-nag against templates
         uses: stelligent/cfn_nag@master
         with:
