--- a/source/sample-waiting-room-site/package.json
+++ b/source/sample-waiting-room-site/package.json
@@ -13,6 +13,7 @@
     "axios-retry": "^3.2.4",
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "simple-statistics": "^7.7.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
