Switch layer build to Amazon Linux 2 and AWS image repo

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,4 +1,7 @@
-FROM python:3.8
+FROM public.ecr.aws/amazonlinux/amazonlinux:latest
 CMD bash
 RUN mkdir -p site-packages/
+RUN amazon-linux-extras enable python3.8
+RUN yum install -y python3.8
+RUN pip3.8 install pip --upgrade
 RUN pip install -t site-packages/ jwcrypto
