pa11ly pullworkflow

--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -145,11 +145,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install Pa11y
-        run: npm install pa11y
-      - name: Check with Pa11y
+        run: npm install -g pa11y
+      - name: Check control panel with Pa11y
         run: |
-          cd source/html
-          find . -iname '*.html' | xargs -I '{}' ../../node_modules/pa11y/bin/pa11y.js {}
+          cd source/control-panel/src
+          find . -iname '*.html' | xargs -I '{}' pa11y {}
+      - name: Check sample waiting site with Pa11y
+        run: |
+          cd source/sample-waiting-room-site/src
+          find . -iname '*.html' | xargs -I '{}' pa11y {}
   
   cfn-lint-job:
     name: Run cfn-lint on templates
