--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -82,10 +82,22 @@ jobs:
           uses: actions/checkout@v2
         - name: Install eslint
           run: npm install -g eslint
-        - name: Check with eslint
+        # - name: Check with eslint
+        #   run: |
+        #     cd source/html
+        #     eslint js/app
+        - name: Check control panel with eslint
           run: |
-            cd source/html
-            eslint js/app
+            cd source/control-panel/src
+            find . -name '*.js' -type f -print | \
+              grep --invert-match "/node_modules/" | \
+              xargs eslint
+        - name: Check sample waiting site with eslint
+          run: |
+            cd source/sample-waiting-room-site/src
+            find . -name '*.js' -type f -print | \
+              grep --invert-match "/node_modules/" | \
+              xargs eslint
 
   codeql-check-job:
     runs-on: ubuntu-latest
