--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -89,7 +89,9 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v2
         - name: Install eslint
-          run: npm install -g eslint
+          run: |
+            npm install -g eslint
+            npm install -g --save-dev eslint eslint-plugin-vue
         - name: Check control panel with eslint
           run: |
             cd source/control-panel/src
