--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -91,7 +91,7 @@ jobs:
         - name: Install eslint
           run: |
             npm install -g eslint
-            npm install -g --save-dev eslint eslint-plugin-vue
+            npm install -g eslint-plugin-vue@latest --save-dev
         - name: Check control panel with eslint
           run: |
             cd source/control-panel/src
