eslint plugin vue

--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -81,9 +81,9 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v2
         - name: Install eslint
-          run: |
-            npm install -g eslint
-            npm install -g eslint-plugin-vue@latest --save-dev
+          run: npm install -g eslint
+        - name: Install eslint-plugin-vue
+          run: npm install -g eslint-plugin-vue@latest --save-dev
         # - name: Check with eslint
         #   run: |
         #     cd source/html
