--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -82,28 +82,28 @@ jobs:
             grep --invert-match "/node_modules/" | \
             xargs jshint
 
-  eslint-check-job:
-      runs-on: ubuntu-latest
-      name: Check source code with eslint
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v2
-        - name: Install eslint
-          run: |
-            npm install -g eslint
-            npm install -g eslint-plugin-vue@latest --save-dev
-        - name: Check control panel with eslint
-          run: |
-            cd source/control-panel/src
-            find . -name '*.js' -type f -print | \
-              grep --invert-match "/node_modules/" | \
-              xargs eslint
-        - name: Check sample waiting site with eslint
-          run: |
-            cd source/sample-waiting-room-site/src
-            find . -name '*.js' -type f -print | \
-              grep --invert-match "/node_modules/" | \
-              xargs eslint
+  # eslint-check-job:
+  #     runs-on: ubuntu-latest
+  #     name: Check source code with eslint
+  #     steps:
+  #       - name: Checkout
+  #         uses: actions/checkout@v2
+  #       - name: Install eslint
+  #         run: |
+  #           npm install -g eslint
+  #           npm install -g eslint-plugin-vue@latest --save-dev
+  #       - name: Check control panel with eslint
+  #         run: |
+  #           cd source/control-panel/src
+  #           find . -name '*.js' -type f -print | \
+  #             grep --invert-match "/node_modules/" | \
+  #             xargs eslint
+  #       - name: Check sample waiting site with eslint
+  #         run: |
+  #           cd source/sample-waiting-room-site/src
+  #           find . -name '*.js' -type f -print | \
+  #             grep --invert-match "/node_modules/" | \
+  #             xargs eslint
 
   codeql-check-job:
     runs-on: ubuntu-latest
