--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -135,7 +135,7 @@ jobs:
         bandit-check-job,
         pylint-check-job,
         jshint-check-job,
-        eslint-check-job,
+        # eslint-check-job,
         codeql-check-job
       ]
     steps:
