--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -74,34 +74,22 @@ jobs:
             grep --invert-match "/node_modules/" | \
             xargs jshint
 
-  # eslint-check-job:
-  #     runs-on: ubuntu-latest
-  #     name: Check source code with eslint
-  #     steps:
-  #       - name: Checkout
-  #         uses: actions/checkout@v2
-  #       - name: Install eslint
-  #         run: npm install -g eslint
-  #       - name: Install eslint-plugin-vue
-  #         run: |
-  #           npm install eslint-plugin-vue@latest --save-dev
-  #           npm install babel-eslint --save-dev
-  #       # - name: Check with eslint
-  #       #   run: |
-  #       #     cd source/html
-  #       #     eslint js/app
-  #       - name: Check control panel with eslint
-  #         run: |
-  #           cd source/control-panel/src
-  #           find . -name '*.js' -type f -print | \
-  #             grep --invert-match "/node_modules/" | \
-  #             xargs eslint
-  #       - name: Check sample waiting site with eslint
-  #         run: |
-  #           cd source/sample-waiting-room-site/src
-  #           find . -name '*.js' -type f -print | \
-  #             grep --invert-match "/node_modules/" | \
-  #             xargs eslint
+  eslint-check-job:
+      runs-on: ubuntu-latest
+      name: Check source code with eslint
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+        - name: Install eslint
+          run: npm install -g eslint
+        - name: Check control panel with eslint
+          run: |
+            cd source/control-panel/src
+            eslint .
+        - name: Check sample waiting site with eslint
+          run: |
+            cd source/sample-waiting-room-site/src
+            eslint .
 
   codeql-check-job:
     runs-on: ubuntu-latest
