--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -81,7 +81,9 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v2
         - name: Install eslint
-          run: npm install -g eslint
+          run: |
+            npm install -g eslint
+            npm install eslint-plugin-vue@latest --save-dev
         - name: Check control panel with eslint
           run: |
             cd source/control-panel/src
