--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -82,23 +82,23 @@ jobs:
             grep --invert-match "/node_modules/" | \
             xargs jshint
 
-  eslint-check-job:
-      runs-on: ubuntu-latest
-      name: Check source code with eslint
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v2
-        - name: Install eslint
-          run: |
-            npm install -g eslint
-        - name: Check control panel with eslint
-          run: |
-            cd source/control-panel/src
-            eslint .
-        - name: Check sample waiting site with eslint
-          run: |
-            cd source/sample-waiting-room-site/src
-            eslint .
+  # eslint-check-job:
+  #     runs-on: ubuntu-latest
+  #     name: Check source code with eslint
+  #     steps:
+  #       - name: Checkout
+  #         uses: actions/checkout@v2
+  #       - name: Install eslint
+  #         run: |
+  #           npm install -g eslint
+  #       - name: Check control panel with eslint
+  #         run: |
+  #           cd source/control-panel/src
+  #           eslint .
+  #       - name: Check sample waiting site with eslint
+  #         run: |
+  #           cd source/sample-waiting-room-site/src
+  #           eslint .
 
   codeql-check-job:
     runs-on: ubuntu-latest
