--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -74,24 +74,24 @@ jobs:
             grep --invert-match "/node_modules/" | \
             xargs jshint
 
-  # eslint-check-job:
-  #     runs-on: ubuntu-latest
-  #     name: Check source code with eslint
-  #     steps:
-  #       - name: Checkout
-  #         uses: actions/checkout@v2
-  #       - name: Install eslint
-  #         run: |
-  #           npm install -g eslint
-  #           npm install eslint-plugin-vue@latest --save-dev
-  #       - name: Check control panel with eslint
-  #         run: |
-  #           cd source/control-panel/src
-  #           eslint .
-  #       - name: Check sample waiting site with eslint
-  #         run: |
-  #           cd source/sample-waiting-room-site/src
-  #           eslint .
+  eslint-check-job:
+      runs-on: ubuntu-latest
+      name: Check source code with eslint
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+        - name: Install eslint
+          run: |
+            npm install eslint --save-dev -g 
+            npm install eslint-plugin-vue@latest --save-dev -g
+        - name: Check control panel with eslint
+          run: |
+            cd source/control-panel/src
+            npx eslint .
+        - name: Check sample waiting site with eslint
+          run: |
+            cd source/sample-waiting-room-site/src
+            npx eslint .
 
   codeql-check-job:
     runs-on: ubuntu-latest
@@ -123,7 +123,7 @@ jobs:
         bandit-check-job,
         pylint-check-job,
         jshint-check-job,
-        # eslint-check-job,
+        eslint-check-job,
         codeql-check-job
       ]
     # use a specific environment for this build that has secrets defined 
