--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -89,9 +89,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install eslint
-        run: |
-          npm install eslint --save-dev -g 
-          npm install eslint-plugin-vue@latest --save-dev -g
+        run: npm install -g eslint --save-dev
+      - name: Install eslint vue plugin
+        run: npm install -g eslint-plugin-vue@latest --save-dev
       - name: Check control panel with eslint
         run: |
           cd source/control-panel/src
@@ -131,7 +131,7 @@ jobs:
         bandit-check-job,
         pylint-check-job,
         jshint-check-job,
-        # eslint-check-job,
+        eslint-check-job,
         codeql-check-job
       ]
     steps:
