--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Install eslint
         run: npm install -g eslint --save-dev
       - name: Install eslint vue plugin
-        run: npm install -g eslint-plugin-vue@latest --save-dev
+        run: npm install eslint-plugin-vue@latest --save-dev
       - name: Check control panel with eslint
         run: |
           cd source/control-panel/src
