--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -81,9 +81,9 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v2
         - name: Install eslint
-          run: |
-            npm install eslint --save-dev -g 
-            npm install eslint-plugin-vue@latest --save-dev -g
+          run: npm install -g eslint --save-dev
+        - name: Install eslint vue plugin
+          run: npm install eslint-plugin-vue@latest --save-dev
         - name: Check control panel with eslint
           run: |
             cd source/control-panel/src
