--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -84,6 +84,8 @@ jobs:
           run: npm install -g eslint --save-dev
         - name: Install eslint vue plugin
           run: npm install eslint-plugin-vue@latest --save-dev
+        - name: Install eslint babel
+          run: npm install babel-eslint --save-dev
         - name: Check control panel with eslint
           run: |
             cd source/control-panel/src
