--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -83,9 +83,9 @@ jobs:
         - name: Install eslint
           run: npm install -g eslint --save-dev
         - name: Install eslint vue plugin
-          run: npm install eslint-plugin-vue@latest --save-dev
+          run: npm install -g eslint-plugin-vue@latest --save-dev
         - name: Install eslint babel
-          run: npm install babel-eslint --save-dev
+          run: npm install -g babel-eslint --save-dev
         - name: Check control panel with eslint
           run: |
             cd source/control-panel/src
