--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -84,10 +84,10 @@ jobs:
           run: npm install -g eslint --save-dev
         - name: Install eslint vue plugin
           run: npm install -g eslint-plugin-vue@latest --save-dev
-        - name: Install npm fetch
-          run: npm i node-fetch@2.6.1
         - name: Install eslint babel
           run: npm install -g babel-eslint --save-dev
+        - name: Install npm fetch
+          run: npm i -g node-fetch@2.6.1
         - name: Check control panel with eslint
           run: |
             cd source/control-panel/src
