--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -81,13 +81,13 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v2
         - name: Install eslint
-          run: npm install -g eslint --save-dev
+          run: npm install eslint --save-dev
         - name: Install eslint vue plugin
-          run: npm install -g eslint-plugin-vue@latest --save-dev
+          run: npm install eslint-plugin-vue@latest --save-dev
         - name: Install eslint babel
-          run: npm install -g babel-eslint --save-dev
+          run: npm install babel-eslint --save-dev
         - name: Install npm fetch
-          run: npm i -g node-fetch@2.6.1
+          run: npm i node-fetch@2.6.1
         - name: Check control panel with eslint
           run: |
             cd source/control-panel/src
