--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -83,11 +83,11 @@ jobs:
         - name: Install npm fetch
           run: npm i node-fetch@2.6.1
         - name: Install eslint
-          run: npm install eslint --save-dev
+          run: npm install eslint 
         - name: Install eslint vue plugin
-          run: npm install eslint-plugin-vue@latest --save-dev
+          run: npm install eslint-plugin-vue@latest 
         - name: Install eslint babel
-          run: npm install babel-eslint --save-dev
+          run: npm install babel-eslint 
         - name: Check control panel with eslint
           run: |
             cd source/control-panel/src
