--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -92,8 +92,8 @@ jobs:
         run: npm install -g eslint --save-dev
       - name: Install eslint vue plugin
         run: npm install -g eslint-plugin-vue@latest --save-dev
-      - name: Install eslint babel
-        run: npm install -g babel-eslint --save-dev
+      # - name: Install eslint babel
+      #   run: npm install -g babel-eslint --save-dev
       - name: Check control panel with eslint
         run: |
           cd source/control-panel/src
