--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -80,14 +80,14 @@ jobs:
       steps:
         - name: Checkout
           uses: actions/checkout@v2
-        - name: Install npm fetch
-          run: npm i node-fetch@2.6.1
+        # - name: Install npm fetch
+        #   run: npm i node-fetch@2.6.1
         - name: Install eslint
-          run: npm install eslint 
+          run: npm install eslint --save-dev
         - name: Install eslint vue plugin
-          run: npm install eslint-plugin-vue@latest 
-        - name: Install eslint babel
-          run: npm install babel-eslint 
+          run: npm install eslint-plugin-vue@latest --save-dev
+        # - name: Install eslint babel
+        #   run: npm install babel-eslint --save-dev
         - name: Check control panel with eslint
           run: |
             cd source/control-panel/src
