--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -92,16 +92,10 @@ jobs:
         run: npm install -g eslint --save-dev
       - name: Install eslint vue plugin
         run: npm install -g eslint-plugin-vue@latest --save-dev
-      # - name: Install eslint babel
-      #   run: npm install -g babel-eslint --save-dev
       - name: Check control panel with eslint
-        run: |
-          cd source/control-panel/src
-          npx eslint .
+        run: npx eslint source/control-panel/src
       - name: Check sample waiting site with eslint
-        run: |
-          cd source/sample-waiting-room-site/src
-          npx eslint .
+        run: npx eslint source/sample-waiting-room-site/src
 
   codeql-check-job:
     runs-on: ubuntu-latest
