--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -84,12 +84,8 @@ jobs:
           run: npm install eslint --save-dev
         - name: Install eslint vue plugin
           run: npm install eslint-plugin-vue@latest --save-dev
-        # - name: Install eslint babel
-        #   run: npm install babel-eslint --save-dev
         - name: Check control panel with eslint
-          run: |
-            cd source/control-panel/src
-            npx eslint .
+          run: npx eslint source/control-panel/src
         - name: Check sample waiting site with eslint
           run: npx eslint source/sample-waiting-room-site/src
 
