--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -89,9 +89,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install eslint
-        run: npm install -g eslint --save-dev
+        run: npm install eslint --save-dev
       - name: Install eslint vue plugin
-        run: npm install -g eslint-plugin-vue@latest --save-dev
+        run: npm install eslint-plugin-vue@latest --save-dev
       - name: Check control panel with eslint
         run: npx eslint source/control-panel/src
       - name: Check sample waiting site with eslint
