--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -254,24 +254,24 @@ jobs:
             cat error.txt
             exit 1
           fi
-      # - name: Configure AWS credentials
-      #   uses: aws-actions/configure-aws-credentials@master
-      #   with:
-      #     role-to-assume: ${{ secrets.VWR_ROLE_ARN }}
-      #     aws-region: ${{ env.REGION }}
-      #     role-duration-seconds: 900
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@master
+        with:
+          role-to-assume: ${{ secrets.VWR_ROLE_ARN }}
+          aws-region: ${{ env.REGION }}
+          role-duration-seconds: 900
       - name: Restore deployment directory from cache
         uses: actions/cache@v2
         id: cache-deployment
         with:
           path: deployment/
           key: ${{ github.sha }}
-      # - name: Upload to S3
-      #   # deploy to our test bucket if not doing a release
-      #   if: ${{github.ref_name != env.RELEASE_BRANCH}}
-      #   run: |
-      #     cd deployment
-      #     ./deploy.sh -b $DIST_OUTPUT_BUCKET -s ${{ github.event.repository.name }} -v $VERSION -r "$REGIONS_TO_DEPLOY" -a none -t dev
+      - name: Upload to S3
+        # deploy to our test bucket if not doing a release
+        if: ${{github.ref_name != env.RELEASE_BRANCH}}
+        run: |
+          cd deployment
+          ./deploy.sh -b $DIST_OUTPUT_BUCKET -s ${{ github.event.repository.name }} -v $VERSION -r "$REGIONS_TO_DEPLOY"
       - name: Zip up regional and global assets
         run: |
           cd deployment
