--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -4,7 +4,7 @@ name: Push Workflow
 env:
   REGION: us-east-1
   DIST_OUTPUT_BUCKET: sb-poc-solutions-features
-  REGIONS_TO_DEPLOY: "us-west-2 us-east-1"
+  REGIONS_TO_DEPLOY: "us-west-2 us-east-1 eu-west-1"
   RELEASE_OUTPUT_BUCKET: sb-poc-solutions
   VERSION: ${{ secrets.VERSION }}
   RELEASE_BRANCH: main 
