--- a/source/control-panel/package.json
+++ b/source/control-panel/package.json
@@ -35,8 +35,7 @@
       "plugin:vue/vue3-essential",
       "eslint:recommended"
     ],
-    "parserOptions": {
-    },
+    "parserOptions": {},
     "rules": {}
   },
   "browserslist": [
