--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
   build:
     commands:
       - echo "Starting build `date` in `pwd`"
-      - pip install --upgrade --force-reinstall -r deployment/requirements.txt
+      - pip install --upgrade -r deployment/requirements.txt
       - cd deployment && chmod +x ./build-s3-dist.sh && ./build-s3-dist.sh $DIST_OUTPUT_BUCKET $SOLUTION_NAME $VERSION
       - echo "Build completed `date`"
       - echo "Starting open-source-dist `date` in `pwd`"
