Clean up Python dependencies for release #171

--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -1,15 +1,61 @@
+astroid
+attrs
 aws-requests-auth
+aws-sam-translator
 awscli
+blessed
 boto3
 botocore
 build
+certifi
+cffi
 cfn-lint
 chalice
+chardet
+click
+colorama
 crhelper
 cryptography
+decorator
 docker
+docutils
+idna
+inquirer
+isort
+Jinja2
+jmespath
+jsonpatch
+jsonpointer
+jsonschema
+junit-xml
 jwcrypto
+lazy-object-proxy
+MarkupSafe
+mccabe
+mypy-extensions
+networkx
+packaging
+pbr
+pep517
+pyasn1
+pycparser
+pyparsing
+pyrsistent
 python-dateutil
+python-editor
+pytz
+PyYAML
+readchar
 redis
 requests
+rsa
+s3transfer
+six
 testresources
+toml
+tomli
+tomlkit
+urllib3
+wcwidth
+websocket-client
+wrapt
