Update source locations for SQ

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,16 @@
 # for details on sources and exclusions. Note also .gitignore
 #
 
-sonar.sources=source
+sonar.sources= \
+    source/control-panel, \
+    source/core-api, \
+    source/core-api-authorizers-sample, \
+    source/openid-waitingroom, \
+    source/sample-inlet-strategies, \
+    source/sample-waiting-room-site, \
+    source/shared, \
+    source/token-authorizers
+
     
 sonar.exclusions= \
     **/package/**, \
