Update source locations for SQ

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,7 +23,7 @@ sonar.sources= \
     source/sample-inlet-strategies, \
     source/sample-waiting-room-site, \
     source/shared, \
-    source/token-authorizers
+    source/token-authorizer
 
     
 sonar.exclusions= \
