Update source locations for SQ; add projected date to CHANGELOG for pipeline

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,24 +16,21 @@
 #
 
 sonar.sources= \
-    source/control-panel, \
-    source/core-api, \
-    source/core-api-authorizers-sample, \
-    source/openid-waitingroom, \
-    source/sample-inlet-strategies, \
-    source/sample-waiting-room-site, \
-    source/shared, \
-    source/token-authorizer
+    source
 
     
 sonar.exclusions= \
     **/package/**, \
     **/.aws-sam/**, \
     **/test/**, \
-    source/tools/**
+    **/dist/**, \
+    **/node_modules/**, \
+    source/tools/**, \
+    source/loadtest/**
 
 
 # sonar.tests=source/test
+
 
 sonar.sourceEncoding=UTF-8
 
