Updates for SQ and pipeline

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,13 +20,14 @@ sonar.sources= \
 
     
 sonar.exclusions= \
-    **/package/**, \
     **/.aws-sam/**, \
-    **/test/**, \
+    **/chalice/vendor/**
     **/dist/**, \
     **/node_modules/**, \
-    source/tools/**, \
-    source/loadtest/**
+    **/package/**, \
+    **/test/**, \
+    source/loadtest/**, \
+    source/tools/**
 
 
 # sonar.tests=source/test
