Updates for SQ and pipeline

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,12 +20,13 @@ sonar.sources= \
 
     
 sonar.exclusions= \
-    **/.aws-sam/**, \
-    **/chalice/vendor/**
-    **/dist/**, \
-    **/node_modules/**, \
-    **/package/**, \
-    **/test/**, \
+    source/**/.aws-sam/**, \
+    source/**/chalice/vendor/**
+    source/**/dist/**, \
+    source/**/node_modules/**, \
+    source/**/package/**, \
+    source/**/*test*, \
+    source/**/test/**, \
     source/loadtest/**, \
     source/tools/**
 
