Updates for SQ and pipeline

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,7 +24,7 @@ sonar.exclusions = \
     source/**/dist/**/*, \
     source/**/node_modules/**/*, \
     source/**/package/**/*, \
-    source/**/*test*/*, \
+    source/**/*test*, \
     source/**/test/**/*, \
     source/loadtest/**/*, \
     source/tools/**/*
