Updates for SQ and pipeline

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,7 +20,7 @@ sonar.sources = source/
     
 sonar.exclusions = \
     source/**/.aws-sam/**/*, \
-    source/**/chalice/vendor/**/*
+    source/**/chalice/vendor/**/*, \
     source/**/dist/**/*, \
     source/**/node_modules/**/*, \
     source/**/package/**/*, \
