--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -41,10 +41,9 @@ sonar.sourceEncoding = UTF-8
 #   Comma-separated list of ant pattern describing paths to coverage reports, relative to projects
 #   root. Leave unset to use the default ("coverage-reports/*coverage-*.xml").
 
-# sonar.python.coverage.reportPaths= \
-#     source/msam/coverage.xml, \
-#     source/events/coverage.xml
-
+sonar.python.coverage.reportPaths= \
+    source/core-api/lambda_functions/coverage.xml, \
+    source/core-api/custom_resources/coverage.xml
 
 # Sensor SonarJS Coverage [javascript] was not allowing globbing
 # for sonar.javascript.lcov.reportPaths such as this
