Rework Locust load testing tools

--- a/source/loadtest/requirements.txt
+++ b/source/loadtest/requirements.txt
@@ -1,82 +1,4 @@
-attrs==20.3.0
-aws-cdk.assets==1.100.0
-aws-cdk.aws-applicationautoscaling==1.100.0
-aws-cdk.aws-autoscaling-common==1.100.0
-aws-cdk.aws-cloudwatch==1.100.0
-aws-cdk.aws-codeguruprofiler==1.100.0
-aws-cdk.aws-ec2==1.100.0
-aws-cdk.aws-ecr==1.100.0
-aws-cdk.aws-ecr-assets==1.100.0
-aws-cdk.aws-efs==1.100.0
-aws-cdk.aws-events==1.100.0
-aws-cdk.aws-iam==1.100.0
-aws-cdk.aws-kms==1.100.0
-aws-cdk.aws-lambda==1.100.0
-aws-cdk.aws-logs==1.100.0
-aws-cdk.aws-s3==1.100.0
-aws-cdk.aws-s3-assets==1.100.0
-aws-cdk.aws-signer==1.100.0
-aws-cdk.aws-sqs==1.100.0
-aws-cdk.aws-ssm==1.100.0
-aws-cdk.cloud-assembly-schema==1.100.0
-aws-cdk.core==1.100.0
-aws-cdk.cx-api==1.100.0
-aws-cdk.region-info==1.100.0
-aws-requests-auth==0.4.3
-awscli==1.22.87
-bcrypt==3.2.0
-boto==2.49.0
-boto3==1.21.32
-botocore==1.24.32
-cattrs==1.5.0
-certifi==2021.5.30
-cffi==1.14.6
-charset-normalizer==2.0.3
-click==8.0.1
-colorama==0.4.3
-ConfigArgParse==1.5.1
-constructs==3.3.97
-cryptography==3.4.8
-docutils==0.15.2
-fabric==2.6.0
-Flask==1.1.2
-Flask-BasicAuth==0.2.0
-Flask-Cors==3.0.10
-gevent==21.1.2
-geventhttpclient==1.4.4
-git-remote-codecommit==1.16
-greenlet==1.1.0
-idna==3.2
-invoke==1.6.0
-itsdangerous==2.0.1
-Jinja2==3.0.1
-jmespath==1.0.0
-jsii==1.31.0
-locust==1.6.0
-MarkupSafe==2.0.1
-msgpack==1.0.2
-paramiko==2.7.2
-pathlib2==2.3.6
-prettytable==2.2.0
-prompt-toolkit==1.0.14
-psutil==5.8.0
-publication==0.0.3
-pyasn1==0.4.8
-pycparser==2.20
-Pygments==2.9.0
-PyInquirer==1.0.3
-PyNaCl==1.4.0
-python-dateutil==2.8.2
-PyYAML==5.4.1
-pyzmq==22.1.0
-regex==2021.7.6
-requests==2.26.0
-rsa==4.7.2
-s3transfer==0.5.2
-six==1.16.0
-typing-extensions==3.10.0.0
-urllib3==1.26.9
-wcwidth==0.2.5
-Werkzeug==2.0.1
-zope.event==4.5.0
-zope.interface==5.4.0
+aws-cdk-lib==2.40.0
+constructs>=10.0.0,<11.0.0
+PyInquirer
+boto3
