--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -136,7 +136,7 @@ jobs:
       - name: Update packages
         run: |
           sudo apt-get update
-          pip install -U pip
+          # pip install -U pip
       - name: Run safety check before build
         run: |
           pip install safety
