--- a/.github/workflows/push-workflow.yml
+++ b/.github/workflows/push-workflow.yml
@@ -136,14 +136,14 @@ jobs:
       - name: Update packages
         run: |
           sudo apt-get update
-          # pip install -U pip
+          pip install -U pip
       - name: Run safety check before build
         run: |
           pip install safety
           safety check -r deployment/requirements.txt
       - name: Install required system packages
         run: |
-          pip install --upgrade -r deployment/requirements.txt 2> error.txt
+          pip install -r deployment/requirements.txt 2> error.txt
           if [ -s error.txt ]; then
             echo "ERROR: System package installation failed."
             cat error.txt
@@ -249,7 +249,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install required system packages
         run: |
-          pip install --upgrade -r deployment/requirements.txt 2> error.txt
+          pip install -r deployment/requirements.txt 2> error.txt
           if [ -s error.txt ]; then
             echo "ERROR: System package installation failed."
             cat error.txt
