Updates for SQ code coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -27,7 +27,8 @@ sonar.exclusions = \
     source/**/*test*, \
     source/**/test/**/*, \
     source/loadtest/**/*, \
-    source/tools/**/*
+    source/tools/**/*, \
+    source/**/*.vue
 
 
 # sonar.tests=source/test
