Updates for SQ code coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,8 +15,9 @@
 # for details on sources and exclusions. Note also .gitignore
 #
 
-sonar.sources = source/
+sonar.python.version = 3.8
 
+sonar.sources = source/
     
 sonar.exclusions = \
     source/**/.aws-sam/**/*, \
