Updates to unit tests for inlet strategies

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -45,7 +45,8 @@ sonar.sourceEncoding = UTF-8
 
 sonar.python.coverage.reportPaths= \
     source/core-api/lambda_functions/coverage.xml, \
-    source/core-api/custom_resources/coverage.xml
+    source/core-api/custom_resources/coverage.xml, \
+    source/sample-inlet-strategies/coverage.xml
 
 # Sensor SonarJS Coverage [javascript] was not allowing globbing
 # for sonar.javascript.lcov.reportPaths such as this
