--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -46,7 +46,9 @@ sonar.sourceEncoding = UTF-8
 sonar.python.coverage.reportPaths= \
     source/core-api/lambda_functions/coverage.xml, \
     source/core-api/custom_resources/coverage.xml, \
-    source/sample-inlet-strategies/coverage.xml
+    source/sample-inlet-strategies/coverage.xml, \
+    source/token-authorizer/chalice/coverage.xml
+
 
 # Sensor SonarJS Coverage [javascript] was not allowing globbing
 # for sonar.javascript.lcov.reportPaths such as this
