--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -48,6 +48,7 @@ sonar.python.coverage.reportPaths= \
     source/core-api/custom_resources/coverage.xml, \
     source/shared/coverage.xml, \
     source/openid-waitingroom/custom_resources/coverage.xml, \
+    source/openid-waitingroom/chalice/coverage.xml, \
     source/sample-inlet-strategies/coverage.xml, \
     source/token-authorizer/chalice/coverage.xml
 
