Update unit tests for API samples

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -29,7 +29,8 @@ sonar.exclusions = \
     source/**/test/**/*, \
     source/loadtest/**/*, \
     source/tools/**/*, \
-    source/**/*.vue
+    source/**/*.vue, \
+    source/**/coverage.xml
 
 
 # sonar.tests=source/test
@@ -51,7 +52,8 @@ sonar.python.coverage.reportPaths= \
     source/openid-waitingroom/custom_resources/coverage.xml, \
     source/openid-waitingroom/chalice/coverage.xml, \
     source/sample-inlet-strategies/coverage.xml, \
-    source/token-authorizer/chalice/coverage.xml
+    source/token-authorizer/chalice/coverage.xml, \
+    source/core-api-authorizers-sample/chalice/coverage.xml
 
 
 # Sensor SonarJS Coverage [javascript] was not allowing globbing
